notebookbar: fix alignment of document title
-Removed fixed height and gap to allow proper text baseline alignment
 with other main-nav elements.

--- a/browser/css/menubar.css
+++ b/browser/css/menubar.css
@@ -37,12 +37,10 @@
 }
 
 .document-title {
-	height: 32px;
 	white-space: nowrap;
 	display: flex;
 	align-items: flex-start;
 	justify-content: center;
-	gap: 5px;
 	flex-direction: column;
 	flex: 1 1 auto;
 }
